fix #386 implement NotStep optimization. This only works for trivial NotStep with a plain vertex step for the NotStep traversal. Uses sql anti join technique